Modernize deprecated new URL(String) usages (step 2: catch-clause widening)
Replace new URL(String) with URI.create(String).toURL() at sites that
previously caught only MalformedURLException, widening those catch
clauses to also cover the unchecked IllegalArgumentException
URI.create can throw. Each try block here is tightly scoped around
just the URL construction (or immediately-derived, side-effect-free
follow-up code), so the wider catch can't accidentally swallow
unrelated failures.

AI-generated